example compiles: talker & listener

--- a/cyber/CMakeLists.txt
+++ b/cyber/CMakeLists.txt
@@ -14,8 +14,14 @@ find_package(Poco REQUIRED Foundation)
 # cyber lib
 file(GLOB_RECURSE SRC_FILES "*.cc")
 
+
+    
+
+
+
+
 # message("SRC_FILES: ${SRC_FILES}")
 
-add_library(${APOLLO_LIB} SHARED ${SRC_FILES})
-target_link_libraries(${APOLLO_LIB} glog gtest ${PROTOBUF_LIBRARIES} fastcdr fastrtps
+add_library(${CYBER_LIB} SHARED ${SRC_FILES})
+target_link_libraries(${CYBER_LIB} glog gtest ${PROTOBUF_LIBRARIES} fastcdr fastrtps
             Poco::Foundation gflags pcrecpp atomic) 
