--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,12 +1,18 @@
 
-SET(APOLLO_APP "apollo_app")
+add_subdirectory(proto)
+
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/proto")
+
+file(GLOB_RECURSE PROTO_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/proto/*.cc")
+
 
 # message("SRC_FILES: ${SRC_FILES}")
+SET(TARGET_TALKER "talker")
+add_executable(${TARGET_TALKER} "talker.cc" ${PROTO_SRC_FILES})
+target_link_libraries(${TARGET_TALKER} ${CYBER_LIB})
 
-add_executable(${APOLLO_APP} ${APP_SRC_FILES})
+# message(FATAL " !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! ${CYBER_LIB}")
 
-# message(FATAL " !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! ${APOLLO_LIB}")
-
-target_link_libraries(${APOLLO_APP} 
-            ${APOLLO_LIB}
-            )
+SET(TARGET_LISTENER "listener")
+add_executable(${TARGET_LISTENER} "listener.cc" ${PROTO_SRC_FILES})
+target_link_libraries(${TARGET_LISTENER} ${CYBER_LIB})
