--- a/examples/proto/CMakeLists.txt
+++ b/examples/proto/CMakeLists.txt
@@ -3,4 +3,4 @@ include("${PROJECT_SOURCE_DIR}/cmake/protobuf_util.cmake")
 
 file(GLOB PROTO_RAW_FILES "*.proto")
 
-gen_proto_src(${PROTO_RAW_FILES})
+gen_proto_src("examples" ${PROTO_RAW_FILES})  
