--- a/src/examples/proto/CMakeLists.txt
+++ b/src/examples/proto/CMakeLists.txt
@@ -3,4 +3,6 @@ include("${PROJECT_SOURCE_DIR}/cmake/protobuf_util.cmake")
 
 file(GLOB PROTO_RAW_FILES "*.proto")
 
-gen_proto_src("examples" ${PROTO_RAW_FILES})  
+# message("PROTO_RAW_FILES: ${PROTO_RAW_FILES}")
+
+gen_proto_src("examples" ${PROTO_RAW_FILES})
