--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,19 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.5.0)
 
 project(apollo_windows)
 
+set(CMAKE_CXX_STANDARD 14)
 
 if(WIN32)
-add_definitions("-DPOCO_WIN32_UTF8")
-endif(WIN32)
+    add_definitions("-DPOCO_WIN32_UTF8")
 
-include_directories("${PROJECT_SOURCE_DIR}/cyber/proto")
+    include_directories("${PROJECT_SOURCE_DIR}/cyber/proto/win")
+else()
+    include_directories("${PROJECT_SOURCE_DIR}/cyber/proto/linux")
+endif()
+
 include_directories("${PROJECT_SOURCE_DIR}")
+
 
 # 
 set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
