--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -2,9 +2,15 @@
 add_subdirectory(proto)
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/proto")
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/proto/src")
 
-file(GLOB_RECURSE PROTO_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/proto/*.cc")
+if(WIN32)
+    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/proto/win")
+    file(GLOB_RECURSE PROTO_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/proto/win/*.cc")
+
+else()
+    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/proto/linux")
+    file(GLOB_RECURSE PROTO_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/proto/linux/*.cc")
+endif()
 
 
 # message("SRC_FILES: ${SRC_FILES}")
