--- a/src/examples/proto/CMakeLists.txt
+++ b/src/examples/proto/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB PROTO_RAW_FILES "*.proto")
 
 # message("PROTO_RAW_FILES: ${PROTO_RAW_FILES}")
 
-gen_proto_src("examples" ${PROTO_RAW_FILES})
+gen_proto_src_if_not_exist("examples" 1 ${PROTO_RAW_FILES})
